# FastAPI-boilerplate

./: .dockerignore  .gitleaks.toml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  EXECUTION_SYSTEM.md  Makefile  README.md  TEMPLATE_ROADMAP.md  alembic.ini  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: dependency-vulnerability-scan.yml  docker-build.yml  docs.yml  linting.yml  migration-check.yml  secret-scan.yml  security-analysis.yml  tests.yml  type-checking.yml
community/: index.html
docs/: community.md  index.md
docs/getting-started/: architecture-decisions.md  configuration.md  first-run.md  index.md  installation.md  quickstart-local.md  quickstart-production.md  template-philosophy.md
docs/user-guide/: architecture-diagrams.md  deployment-diagrams.md  development.md  error-monitoring.md  logging.md  metrics-and-tracing.md  observability-setup.md  production.md  project-structure.md  sequence-diagrams.md  testing.md  troubleshooting.md  versioning.md
docs/user-guide/admin-panel/: adding-models.md  configuration.md  index.md  user-management.md
docs/user-guide/api/: architecture.md  exceptions.md  index.md  pagination.md  request-safety.md  versioning.md
docs/user-guide/authentication/: index.md  jwt-tokens.md  oauth.md  permissions.md  user-management.md
docs/user-guide/background-tasks/: index.md  retry-backoff.md  scheduling.md  workflow-orchestration.md
docs/user-guide/configuration/: docker-setup.md  environment-specific.md  environment-variables.md  index.md  settings-classes.md
docs/user-guide/database/: automation-patterns.md  index.md  migrations.md  models.md  reliability.md
docs/user-guide/deployment/: backups.md  containers.md  index.md  runtime-topology.md  secrets.md
docs/user-guide/guides/: adding-background-job.md  adding-integration.md  adding-workflow.md  index.md
docs/user-guide/integrations/: contracts.md  index.md  resilience.md  runbooks.md
docs/user-guide/rate-limiting/: index.md
docs/user-guide/runbooks/: index.md  migration-failures.md  queue-backlog.md  secret-rotation.md  third-party-outages.md  webhook-failures.md
docs/user-guide/webhooks/: adding-provider.md  index.md
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/first-run/: index.html
getting-started/installation/: index.html
scripts/gunicorn_managing_uvicorn_workers/: .env.example  Dockerfile  docker-compose.yml
scripts/local_with_uvicorn/: .env.example  Dockerfile  docker-compose.yml
scripts/production_with_nginx/: .env.example  Dockerfile  docker-compose.yml
search/: search_index.json
src/: alembic.ini
src/app/: __init__.py  main.py  scheduler.py
src/app/admin/: initialize.py
src/app/api/: __init__.py  contracts.py  dependencies.py  errors.py  query_params.py  routing.py
src/app/api/v1/: __init__.py  (+9 more)
src/app/core/: authorization.py  config.py  health.py  log_redaction.py  logger.py  metrics.py  redis.py  request_context.py  schemas.py  security.py  sentry.py  setup.py  tracing.py  webhooks.py
src/app/domain/: __init__.py  auth_service.py  models.py  post_service.py  rate_limit_service.py  repositories.py  schemas.py  services.py  tier_service.py  user_service.py
src/app/integrations/: __init__.py
src/app/middleware/: logger_middleware.py  metrics_middleware.py  request_body_limit_middleware.py  request_timeout_middleware.py  security_headers_middleware.py
src/app/models/: post.py  rate_limit.py  tier.py  user.py
src/app/platform/: __init__.py  admin.py  application.py  authorization.py  cache.py  config.py  database.py  exceptions.py  health.py  logger.py  middleware.py  queue.py  rate_limit.py  request_context.py  schemas.py  security.py  webhooks.py
src/app/schemas/: user.py
src/app/shared/: __init__.py
src/app/webhooks/: __init__.py  correlation.py  dead_letter.py  idempotency.py  ingestion.py  persistence.py  processing.py  replay.py  replay_tooling.py  retention.py  signatures.py  validation.py
src/app/workers/: __init__.py  functions.py  jobs.py  logging.py  settings.py
src/app/workflows/: __init__.py
src/migrations/: env.py
src/migrations/versions/: 2208c3f7c9d8_add_job_state_history_table_pattern.py  2f6e0a91b8c4_add_integration_sync_checkpoint_table_pattern.py  (+6 more)
src/scripts/: cleanup_token_blacklist.py  create_first_superuser.py  create_first_tier.py  migrations.py  verify_migrations.py
tests/: conftest.py  factories.py  settings.py  test_admin.py  test_api_dependencies.py  test_api_errors.py  test_api_lifespan_integration.py  test_api_query_params.py  test_api_routes.py  test_audit_log_event_pattern.py  test_auth_authorization_integration.py  test_auth_service.py  test_authorization.py  test_config.py  test_database_runtime.py  test_database_sessions.py  test_db_integration.py  test_dead_letter_record_pattern.py  test_health.py  test_health_readiness_integration.py  test_http_client.py  test_idempotency_integration.py  test_idempotency_key_pattern.py  test_integration_contracts.py  test_integration_resilience.py  test_integration_sync_checkpoint_pattern.py  test_job_state_history_pattern.py  test_log_redaction.py  test_logging.py  test_metrics.py  test_migrations_config.py  test_oauth.py  test_post_service.py  test_rate_limit_dependencies.py  test_redis_queue_integration.py  test_request_context.py  test_retry_dead_letter_integration.py  test_security.py  test_sentry.py  test_setup.py  (+33 more)
tests/fixtures/: __init__.py  database.py  redis.py
user-guide/: index.html
user-guide/admin-panel/: index.html
user-guide/api/: index.html
user-guide/authentication/: index.html
user-guide/background-tasks/: index.html
user-guide/caching/: index.html
user-guide/configuration/: index.html
user-guide/database/: index.html
user-guide/development/: index.html
user-guide/production/: index.html
user-guide/project-structure/: index.html
user-guide/rate-limiting/: index.html
user-guide/testing/: index.html
(+69 files in other folders)
